<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_photo_background"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            android:src="@drawable/csgobg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/csgo" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/games_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/card_view" />

        <TextView
            android:id="@+id/rating_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ratingStar"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/name_val" />

        <TextView
            android:id="@+id/description_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@id/rating_val" />
        
        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/description_val">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    android:text="@string/developer" />

                <TextView
                    android:id="@+id/developer_val"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/developer" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    android:text="@string/publisher" />

                <TextView
                    android:id="@+id/publisher_val"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/publisher" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/table_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/table">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button_action_share"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/share"
                    android:textColor="#E6E0E9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <Button
                    android:id="@+id/button_action_visit"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/visit"
                    android:textColor="#E6E0E9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />
            </TableRow>

        </TableLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>