<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/about_name"
        android:importantForAccessibility="no"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_about"/>

        <TextView
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/author_name"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <TextView
            android:id="@+id/author_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/author_email"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>